apps/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: frontend
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: woori-wallet
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: frontend
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 30083
