apps/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  namespace: frontend
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: woori-wallet
  annotations:
    alb.ingress.kubernetes.io/group.name: woori-wallet-prd-public
    alb.ingress.kubernetes.io/group.order: "10"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-name: woori-wallet-prd-public
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: 200-399
spec:
  ingressClassName: alb
  tls:
    - hosts:
        - frontend.dannis.cloud
  rules:
    - host: frontend.dannis.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  name: http
